# LVD-Surv

./: PROJECT_FILE_GUIDE.md  README.md  USER_MANUAL.md  USER_TEST_CHECKLIST.md  conda_environment.yaml  main.py  pyproject.toml  start_lvd.sh
configs/: default.yaml  schema.yaml
lvd_surv/: __init__.py  cli.py  utils.py
lvd_surv/app/: __init__.py  commands.py  desktop.py  session.py  tasks.py
lvd_surv/core/: __init__.py  artifacts.py  config.py  contracts.py  errors.py  paths.py  run_records.py  validators.py
lvd_surv/data/: __init__.py  cmapss.py  loader.py
lvd_surv/features/: __init__.py  analysis.py  time_series.py  transformer.py
lvd_surv/interpretation/: __init__.py  explain.py
lvd_surv/lifetime/: __init__.py  analysis.py  prior.py
lvd_surv/modeling/: __init__.py  inference.py  losses.py  metrics.py  model.py  trainer.py
lvd_surv/reporting/: __init__.py  plots.py
lvd_surv/runtime/: __init__.py  cancellation.py  context.py  logging.py
lvd_surv/workflows/: __init__.py  explanation.py  feature.py  prediction.py  prior.py  training.py  validation.py
scripts/: check_documentation.py  cli.py  release_check.py  validate_outputs.py
tests/: test_cleanup_and_shap.py  test_desktop_session.py  test_final_stable_release.py  test_gui_stability.py  test_stage2_state_and_records.py  test_stage3_architecture.py  test_stage4_config_and_paths.py  test_stage5_release_readiness.py  test_strict_contracts.py  test_workflow_adapters.py
