[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lvd-surv"
version = "1.3.0"
description = "Lightweight variational degradation survival model for CMAPSS RUL reliability curves"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scikit-learn>=1.2",
  "matplotlib>=3.7",
  "scipy>=1.10",
  "tqdm>=4.65",
  "torch>=2.0",
  "PyYAML>=6.0",
  "seaborn>=0.12",
  "dcor>=0.6",
  "xgboost>=1.7",
  "shap>=0.42"
]

[tool.setuptools.packages.find]
include = ["lvd_surv*"]

[project.scripts]
lvd = "lvd_surv.cli:main"
lvd-gui = "lvd_surv.app.desktop:launch"
